# ANN-Project-Implementaion

./: .gitignore  README.md  ann.ipynb  pyproject.toml  requirements.txt  text.txt
